services/config_server.yaml
kind: Service
apiVersion: v1
metadata:
  name: "config-server"
spec:
  selector:
    app: "config-server"
  ports:
    - protocol: "TCP"
      port: 8888
      targetPort: 8888
