services/mariadb.yaml
kind: Service
apiVersion: v1
metadata:
  name: "mariadb"
spec:
  selector:
    app: "mariadb"
  ports:
    - protocol: "TCP"
      port: 3306
      targetPort: 3306
