services/payment_backend.yaml
kind: Service
apiVersion: v1
metadata:
  name: "payment-backend"
spec:
  selector:
    app: "payment-backend"
  ports:
    - protocol: "TCP"
      port: 8100
      targetPort: 8100
  type: LoadBalancer
