services/phpMyAdmin.yaml
kind: Service
apiVersion: v1
metadata:
  name: "phpmyadmin"
spec:
  selector:
    app: "phpmyadmin"
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: LoadBalancer
