services/spring_admin.yaml
kind: Service
apiVersion: v1
metadata:
  name: "spring-admin"
spec:
  selector:
    app: "spring-admin"
  ports:
    - protocol: "TCP"
      port: 7000
      targetPort: 7000
  type: LoadBalancer
